# cartsy_backend

./: .env.example  .gitignore  Dockerfile  PIPELINE.md  README.md  TRAINING.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: products_first20.csv
diagrams/: dedupe-pipeline.dot  training-pipeline.dot
info/: PIPELINE.md  TRAINING.md  brainstorm.md  dedupe_architecture.md  intro-meeting-transcript.txt  spec.md
models/: cartsy_logreg.joblib  false_negatives.csv  false_positives.csv  feature_coefficients.csv  metrics.json  threshold_curve.csv  top_risky_clusters.csv  training_embedding_products.json
models/final_submission/: feature_coefficients.csv  metrics.json
models/train_20260502_130136_final_submission/: calibration_threshold_curve.csv  cartsy_logreg.joblib  threshold_curve.csv
outputs/sample/: README.md  candidate_pairs.parquet  dedupe_groups.jsonl  low_confidence_review.csv  near_miss_pairs.csv  normalized_products.parquet  product_assignments.csv  summary_report.json
src/cartsy_dedupe/: __init__.py  api.py  artifact_index.py  attributes.py  blocking.py  cli.py  clustering.py  color_terms.py  config.py  embed_cache.py  embeddings.py  evaluation.py  features.py  ingest.py  normalize.py  pipeline.py  query.py  reporting.py  schemas.py  scoring.py  storage.py  text.py  training.py
src/cartsy_dedupe/utils/: __init__.py  pipeline_cache.py  pipeline_helpers.py  pipeline_metrics.py  pipeline_sql.py
tests/: test_api.py  test_artifact_index.py  test_attributes.py  test_cli.py  test_clustering.py  test_evaluation.py  test_features.py  test_normalize.py  test_pipeline_cache.py  test_postgres_openai.py  test_query.py  test_scoring.py  test_training.py
