[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartsy-dedupe"
version = "0.1.0"
description = "CLI product entity-resolution pipeline for the Cartsy coding challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "joblib>=1.4.0",
  "numpy>=2.0.0",
  "openai>=1.56.0",
  "pgvector>=0.3.6",
  "polars>=0.20.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "rapidfuzz>=3.6.0",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=3.0.0",
  "tqdm>=4.67.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
cartsy-dedupe = "cartsy_dedupe.cli:main"
cartsy-embed-cache = "cartsy_dedupe.embed_cache:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cartsy_dedupe"]
